--- a/themes/ananke/layouts/index.html
+++ b/themes/ananke/layouts/index.html
@@ -1,18 +1,21 @@
 {{ define "main" }}
-<section>
+<section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy {{ $.Param "text_color" | default "mid-gray" }}">
   <div class="container">
     <div class="content">
       <h1>Recent Posts</h1>
       <div class="posts">
         {{ range (where .Site.RegularPages "Type" "posts") }}
           <article>
-            <h2><a href="{{ .RelPermalink }}">{{ .Title }}</a></h2>
+            <h2><a href="{{ .RelPermalink }}" class="link black dim">{{ .Title }}</a></h2>
             <p>{{ .Summary }}</p>
-            <p><a href="{{ .RelPermalink }}">Read more...</a></p>
+            <p><a href="{{ .RelPermalink }}" class="link black dim">Read more...</a></p>
           </article>
+          <hr>
         {{ end }}
       </div>
     </div>
   </div>
 </section>
 {{ end }}
+
+
